--- a/index.html
+++ b/index.html
@@ -77,15 +77,15 @@
         <div class="panel-body">
             <div class="form-group">
                 <label for="setup-api">API Server</label>
-                <input type="text" class="form-control" id="setup-api" placeholder="https://api.kassakiosk.be/" value="https://api.kassakiosk.be/">
+                <input type="text" class="form-control" id="setup-api" placeholder="https://api.kassakiosk.be/" value="http://management.kassakiosk.dev/api/v1/">
             </div>
             <div class="form-group">
                 <label for="setup-uid">UID</label>
-                <input type="text" class="form-control" id="setup-uid" placeholder="UID">
+                <input type="text" class="form-control" id="setup-uid" placeholder="UID" value="1">
             </div>
             <div class="form-group">
                 <label for="setup-secret">Secret</label>
-                <input type="text" class="form-control" id="setup-secret" placeholder="Secret">
+                <input type="text" class="form-control" id="setup-secret" placeholder="Secret" value="1">
             </div>
             <button type="submit" class="btn btn-default setup-submit">Login</button>
         </div>
