--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 
     <script src="js/jquery.min.js" type="text/javascript"></script>
     <script src="js/jquery-ui.min.js" type="text/javascript"></script>
+    <script src="js/md5.min.js" type="text/javascript"></script>
     <script src="js/bootstrap.min.js" type="text/javascript"></script>
     <script src="js/kitchen.js" type="text/javascript"></script>
     <link href='css/roboto.font.css' rel='stylesheet' type='text/css'>
